--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Mm]emoryCaptures/
+VisualizerSurvival/[Ll]ibrary/
+VisualizerSurvival/[Tt]emp/
+VisualizerSurvival/[Oo]bj/
+VisualizerSurvival/[Bb]uild/
+VisualizerSurvival/[Bb]uilds/
+VisualizerSurvival/[Ll]ogs/
+VisualizerSurvival/[Mm]emoryCaptures/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
